<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            style="@style/textViewStyle"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:textColor="@color/color_ffffff"
            android:text="@string/welcome_to"
            android:textSize="17sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            style="@style/textViewStyle"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_ffffff"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/solid_back"
        android:text="@string/create_an_account"
        android:id="@+id/tvCreateAccount"
        android:textSize="15sp"
        style="@style/textViewStyle"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_alignStart="@+id/tvAlreadyAccount"
        android:layout_alignEnd="@+id/tvAlreadyAccount"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/color_111111"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/tvAlreadyAccount"
        android:layout_height="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/stroke_back"
        android:text="@string/already_have_an_account"
        android:id="@+id/tvAlreadyAccount"
        android:textSize="15sp"
        style="@style/textViewStyle"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:textColor="@color/color_ffffff"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:layout_alignParentBottom="true"
        android:layout_height="40dp"/>

</RelativeLayout>