<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="slotDetailVm"
            type="com.example.smartz.slots.SlotDetailVm" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".slots.SlotDetailActivity">
   <include layout="@layout/toolbar"
       android:id="@+id/toolbar"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_below="@+id/toolbar"
        android:id="@+id/cardDetail"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/slot_name"
                android:id="@+id/tvSlotTitle"
                style="@style/textViewStyle"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textColor="@color/color_0f0f57"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/tvSlotName"
                android:layout_marginTop="7dp"
                style="@style/textViewStyle"
                android:textSize="14sp"
                android:text="@{slotDetailVm.slotName}"
                android:textColor="@color/color_36363C"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/slot_location"
                android:id="@+id/tvSlotLocationTitle"
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/margin_15dp"
                android:textColor="@color/color_0f0f57"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:layout_width="250dp"
                android:visibility="visible"
                android:layout_marginTop="7dp"
                android:lineSpacingExtra="1.4dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:id="@+id/tvLocationDetail"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:text="@{slotDetailVm.slotLoction}"
                android:textColor="@color/color_36363C"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_10dp"
      android:text="@string/slot_booking"
      android:textColor="@color/color_111111"
      style="@style/textViewStyle"
      android:id="@+id/tvBooking"
      android:layout_below="@+id/cardDetail"
      android:textSize="@dimen/text_size_14sp"
      android:layout_marginStart="@dimen/margin_12dp"
      />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_10dp"
        tools:listitem="@layout/custom_slot_bookiing"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBooking"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_above="@+id/tvBookSlot"
        android:id="@+id/rlSlots">

    </androidx.recyclerview.widget.RecyclerView>
    <TextView
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/tvNoDataAvailable"
        android:visibility="gone"
        android:text="@string/no_data"
        />

    <Button
    android:layout_width="match_parent"
    android:layout_marginStart="@dimen/margin_10dp"
    android:layout_marginEnd="@dimen/margin_10dp"
    android:layout_marginBottom="@dimen/margin_20dp"
    android:layout_alignParentBottom="true"
    android:id="@+id/tvBookSlot"
    style="@style/textViewStyle"
    android:textColor="@color/color_ffffff"
    android:text="@string/book_Slot"
    android:onClick="@{()->slotDetailVm.startBookSlot()}"
    android:background="@drawable/solid_back"
    android:layout_height="@dimen/height_50dp"/>
    <include layout="@layout/progress_bar"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/slotProgressBar"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>
</layout>