<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="HomeViewModel"
            type="com.example.smartz.home.HomeVM" />

        <import type="com.example.smartz.login.LoginVM.ERRORS" />

    </data>
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include layout="@layout/progress_bar"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/progressBarlist"
                android:visibility="gone"
                android:layout_centerInParent="true"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:title="@string/parking_slots"
                app:titleTextColor="@color/color_ffffff"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="10dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/solid_rect_back"
                    android:backgroundTint="#4CAF50"
                    android:layout_height="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textViewStyle"
                    android:layout_marginStart="7dp"
                    android:textColor="@color/color_0f0f57"
                    android:text="@string/available"
                    android:textSize="12sp"
                    />
                <View
                    android:layout_width="10dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/solid_rect_back"
                    android:backgroundTint="@color/color_1996f3"
                    android:layout_marginStart="@dimen/margin_10dp"
                    android:layout_height="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textViewStyle"
                    android:layout_marginStart="7dp"
                    android:textColor="@color/color_0f0f57"
                    android:text="@string/booked"
                    android:textSize="12sp"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rlSlots"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/llRoot"
                android:layout_marginTop="@dimen/margin_10dp"
                tools:listitem="@layout/custom_slot_info">

            </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation"
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|left"
            app:headerLayout="@layout/navigation_header"
            app:menu="@menu/my_navigation_items" />
    </androidx.drawerlayout.widget.DrawerLayout>



    </layout>